# korolev-sdk

./: CMakeLists.txt  Makefile  README.md  linker.ld
libc/: iocalls.c  korolev.c  puts.c  sc.asm  strlen.c
libc/include/: korolev.h  stdio.h  string.h  unistd.h
src/: main.c
